# game-engine

./: .CMakeLists.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md  cmake_install.cmake
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  docs_cmakeRulesBuildPhase.makeDebug  documentation_cmakeRulesBuildPhase.makeMinSizeRel  doxygen_cmakeRulesBuildPhase.makeRelease
assets/tilesets/: basic-map.json  basic-map.tmx
game-engine.xcodeproj/: project.pbxproj
include/: AccelComp.h  AccelerationC.h  BattleStats.h  Component.h  ComponentTag.h  ComponentTuple.h  ComponentVisitors.h  CopyistComp.h  DrawVisitor.h  DynamicCompSetC.h  DynamicSetC.h  Entity.h  FactoryTuple.h  FactoryTupleImpl.h  FactoryTupleStdImpl.h  GameContext.h  GameSettings.h  GameVisitors.h  GameWorld.h  MimicC.h  MimicComp.h  PhysicsComps.h  PositionC.h  PositionComp.h  Script.h  Settings.h  SettingsConcrete.h  SimpleMotionC.h  SimpleMotionComp.h  StaticCompSetC.h  StaticSetC.h  TypeEqualityVisitor.h  UpdateVisitor.h  VelocityC.h  VelocityComp.h  tags
shared/: SampleChat.json
src/: .CMakeLists.txt.swp  AccelComp.cpp  AccelerationC.h  CMakeLists.txt  ComponentVisitors.cpp  CopyistComp.cpp  DrawVisitor.h  Driver.m.cxx  DynamicCompSetC.cpp  DynamicSetC.cpp  GameContext.cpp  GameSettings.cpp  GameVisitors.cpp  GameWorld.cpp  Makefile  MimicC.cpp  MimicComp.cpp  PhysicsComps.cpp  PositionC.cpp  PositionComp.cpp  SimpleMotionC.cpp  SimpleMotionComp.cpp  UpdateVisitor.cpp  VelocityC.cpp  VelocityComp.cpp  cmake_install.cmake  main.m.cxx  tags
src/game-engine.build/Debug/game-engine.build/: dgph  dgph~
src/game-engine.build/Debug/game-engine.build/Objects-normal/x86_64/: game-engine.LinkFileList  main.d
src/inc/: .FactoryTuple.h.swp  Component.h  Entity.h  FactoryTuple.h  SimplePODComponents.h  index_constant.h  my_literals.h  type_constant.h
src/inc/Components/: Echo.h  Mimic.h  PODComponents.h  Position.h  SimpleMotion.h  Tile.h  Velocity.h
src/inc/PainterComponents/: TileComponent.h
src/inc/ProcessorComponents/: ResponsiveComponent.h
test/: .FactoryTuple.cc.swp  CMakeLists.txt  ComponentTuple.cpp  Entity.cc  Entity.cpp  FactoryTuple.cc  FactoryTuple.cpp  Makefile  StaticCompSetC.cpp  aetee-tests.cc  cmake_install.cmake  sanity.cpp  sanity_check.cc  tags
test/CMakeScripts/: check_cmakeRulesBuildPhase.makeDebug  check_cmakeRulesBuildPhase.makeMinSizeRel  check_cmakeRulesBuildPhase.makeRelWithDebInfo  check_cmakeRulesBuildPhase.makeRelease  unittests_cmakeRulesBuildPhase.makeDebug  unittests_cmakeRulesBuildPhase.makeMinSizeRel  unittests_cmakeRulesBuildPhase.makeRelWithDebInfo  unittests_cmakeRulesBuildPhase.makeRelease
test/game-engine.build/Debug/check.build/: Script-72943E53E95644248C565E95.sh  dgph  dgph~
test/game-engine.build/Debug/game-engine-unittests.build/: dgph  dgph~
test/game-engine.build/Debug/game-engine-unittests.build/Objects-normal/x86_64/: FactoryTuple.dia  game-engine-unittests.LinkFileList
