FILE (GLOB_RECURSE project_SRCS *.cpp *.h *.hpp)
FILE (GLOB project_DRIVER_SRC *.m.cxx)

# Add libraries here. Example: ${Boost_LIBRARIES}
SET (project_LIBS "${PROJECT_LIBRARIES}")
SET (project_BIN ${PROJECT_NAME})

ADD_LIBRARY(${project_LIB} ${project_SRCS})
TARGET_LINK_LIBRARIES(${project_LIB} ${SFML_LIBRARIES} ${project_LIBS})

ADD_EXECUTABLE(${project_BIN} ${project_DRIVER_SRC})
TARGET_LINK_LIBRARIES(${project_BIN} ${SFML_LIBRARIES} ${project_LIBS} ${project_LIB})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES COMPILE_FLAGS "-lsfml-graphics -lsfml-window -lsfml-system")
INSTALL(TARGETS ${project_BIN} DESTINATION bin)
